# multi-quadrotor-formation

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  testmain.py
multi-quadrotor-formation/env/: environment.py  utils.py
multi-quadrotor-formation/env/models/: aviary.py  body.py  motor.py  pid.py  quadrotor.py
